# HR_syatem-

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
app/: __init__.py  config.py  main.py  worker.py
app/api/: deps.py  routes_auth.py  routes_users.py
app/api/routes/: auth.py  escalations.py  health.py  knowledge_base.py  responses.py  tickets.py
app/core/: config.py  logging.py  security.py
app/database/: session.py
app/database/migrations/: env.py
app/database/migrations/versions/: 001_initial_schema.py
app/middleware/: audit.py  auth.py
app/models/: __init__.py  audit_log.py  escalation.py  knowledge_base.py  response.py  ticket.py  user.py
app/prompts/: classification.py  escalation.py  response_generation.py  templates.py
app/repositories/: escalation_repository.py  knowledge_base_repository.py  response_repository.py  ticket_repository.py  user_repository.py
app/schemas/: __init__.py  auth.py  escalation.py  knowledge_base.py  response.py  ticket.py  user.py
app/services/: ai_client.py  auth.py  auth_service.py  classification_service.py  escalation_service.py  response_service.py  ticket_service.py  user.py
hr_system/: __init__.py  app.py  config.py  database.py  models.py  schemas.py
hr_system/api/: jobs.py  resumes.py  screening.py
hr_system/matching/: __init__.py  engine.py
hr_system/parsers/: __init__.py  base.py  docx_parser.py  pdf_parser.py
hr_system/routers/: jobs.py  resumes.py  screening.py
hr_system/services/: matcher.py  resume_parser.py
src/hr_system/: __init__.py  app.py  database.py
src/hr_system/chatbot/: __init__.py  conversation.py  routes.py  schemas.py  service.py
src/hr_system/policy_rag/: __init__.py  chunker.py  embeddings.py  models.py  routes.py  schemas.py  service.py  vector_store.py
src/hr_system/recruitment/: __init__.py  models.py  routes.py  schemas.py  service.py
src/hr_system/static/: index.html
src/hr_system/static/css/: style.css
src/hr_system/static/js/: app.js
tests/: conftest.py  test_api.py  test_auth.py  test_health.py  test_matcher.py  test_matching.py  test_parser.py
tests/api/: test_auth_api.py  test_health_api.py  test_knowledge_base_api.py  test_tickets_api.py
tests/integration/: test_ticket_workflow.py
tests/test_chatbot/: test_conversation.py  test_routes.py  test_service.py
tests/test_policy_rag/: test_chunker.py  test_embeddings.py  test_routes.py  test_service.py  test_vector_store.py
tests/test_recruitment/: test_models.py  test_routes.py  test_service.py
tests/unit/: test_classification.py  test_escalation.py  test_security.py
